--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,19 +5,7 @@
 	<title>MacEwen Maintenace Log</title>
 </head>
 <body>
-	<div class="container">
-		<div class="jumbotron">
-			<div class="container">
-				<div class="col-sm-4">
-					<img src="images/macewen_logo.jpg" />
-				</div>
-				<div class="col-sm-8">
-					<h1>Maintance Log</h1>
-				</div>
-			</div>
-		</div>
-		<div id="myApp"></div>
-	</div>
+	<div id="root"></div>
 	<script src="./bundle.js" type="text/javascript"></script>
 </body>
 </html>
